summary and read_spines functions

--- a/DendriticSpineR/DESCRIPTION
+++ b/DendriticSpineR/DESCRIPTION
@@ -1,8 +1,18 @@
 Package: DendriticSpineR
 Title: Tools for playing with Dendritic Spine Data
 Version: 0.1.0
-Authors@R: person("Przemyslaw", "Biecek", , "przemyslaw.biecek@gmail.com", role = c("aut", "cre"))
+Authors@R: c(person("Przemyslaw", "Biecek", , "przemyslaw.biecek@gmail.com", role = c("aut", "cre")),
+             person("Piotr", "Smuda", , "piotrsmuda@gmail.com", role = "aut"))
 Description: Tools for playing with Dendritic Spine Data
-Depends: R (>= 3.2.0)
-License: What license is it under?
+Depends: R (>= 3.1.3)
+License: GPL-2
 LazyData: true
+LazyLoad: true
+Imports:
+  dplyr,
+  ggplot2,
+  lme4,
+  lsmeans,
+  openxlsx,
+  scales,
+  stringi
