--- a/DendriticSpineR/NAMESPACE
+++ b/DendriticSpineR/NAMESPACE
@@ -2,11 +2,11 @@
 
 S3method(summary,spines)
 export(diffogram)
-export(model_crossed_effects)
 export(plot_crossed_effects)
 export(plot_distribution)
 export(plot_ecdf)
 export(read_spines)
+export(summary)
 import(dplyr)
 import(ggplot2)
 import(lme4)
