--- a/DendriticSpineR/NAMESPACE
+++ b/DendriticSpineR/NAMESPACE
@@ -14,6 +14,7 @@ import(dplyr)
 import(ggplot2)
 import(lme4)
 import(lsmeans)
-import(openxlsx)
 import(scales)
-import(stringi)
+importFrom(openxlsx,read.xlsx)
+importFrom(stringi,stri_detect_regex)
+importFrom(stringi,stri_extract_all_regex)
