--- a/DendriticSpineR/NAMESPACE
+++ b/DendriticSpineR/NAMESPACE
@@ -6,17 +6,21 @@ S3method(plot_crossed_effects,spines)
 S3method(plot_distributions,spines)
 S3method(summary,spines)
 export(diffogram)
+export(generate_raport_file)
 export(model_spines)
 export(plot_animals)
 export(plot_crossed_effects)
 export(plot_distributions)
 export(read_spines)
+export(render_raport)
 export(transformations)
 import(dplyr)
 import(ggplot2)
+import(knitr)
 import(lme4)
 import(lsmeans)
 import(pbkrtest)
+import(rmarkdown)
 import(scales)
 import(tidyr)
 importFrom(openxlsx,read.xlsx)
