--- a/DendriticSpineR/NAMESPACE
+++ b/DendriticSpineR/NAMESPACE
@@ -16,13 +16,10 @@ export(render_raport)
 export(transformations)
 import(dplyr)
 import(ggplot2)
-import(knitr)
 import(lme4)
 import(lsmeans)
 import(pbkrtest)
-import(rmarkdown)
-import(scales)
-import(tidyr)
 importFrom(openxlsx,read.xlsx)
-importFrom(stringi,stri_detect_regex)
-importFrom(stringi,stri_extract_all_regex)
+importFrom(rmarkdown,render)
+importFrom(scales,percent)
+importFrom(tidyr,extract)
