--- a/DendriticSpineR/NAMESPACE
+++ b/DendriticSpineR/NAMESPACE
@@ -6,8 +6,8 @@ S3method(plot_crossed_effects,spines)
 S3method(plot_distributions,spines)
 S3method(summary,spines)
 export(diffogram)
-export(generate_raport)
 export(generate_raport_file)
+export(make_raport)
 export(model_spines)
 export(plot_animals)
 export(plot_crossed_effects)
